# projektarbeit-ii-team-7

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  Makefile  README.md  build.bat  build_release.bat  clean.bat  shell.nix
.github/workflows/: c-cpp.yml  linux.yml
assets/animated/: npc_crab.json  npc_troll.json
assets/art_resources/HUDs/: start-menu.aseprite
assets/art_resources/animated/: main_character.json
assets/art_resources/aseprite-stuff/: gamePalette.aseprite
assets/art_resources/aseprite_stuff/: Slappah.aseprite  battlescreen-canvas-template.aseprite
assets/art_resources/static/: borkshop logo.aseprite  marketstall.aseprite  ponyblaster.ase  sprite-atlas.aseprite
assets/art_resources/tiled_tilesets/: blue-test-house.tsx  green-test-house.tsx  pipe-tiles.tsx  red-test-house.tsx  sandstone-slums.tsx  test-ground.tsx  test-house.tsx  test-props.tsx  test-sidewalk.tsx  test-size-reference.tsx  test-tower.tsx
assets/art_resources/tiled_tilesets/HUD-tiles/: menu-tiles1.tsx
assets/art_resources/tiled_tilesets/ruled-tiles/: castle-ruled-tiles.tmx
assets/art_resources/tiles/: menu-tiles.aseprite  sandstone-slums.aseprite
assets/sound/SFX/: accept.flac  back_button.flac  cancel.flac  go_button.flac  lose.flac  move_cursor.flac
assets/sound/music/: theme1.flac
assets/tiles/: base_props.aseprite
assets/tilesets/: 1-3_level_tiles.json  assemblia.tiled-session  base_props.json  base_special.json  blue-test-house.json  blue-test-house.tsx  collide.json  green-test-house.json  green-test-house.tsx  info_player_start.json  loot-box.json  path.json  pipe-tiles.json  pipe-tiles.tsx  red-test-house.json  red-test-house.tsx  sandstone-slums.json  sandstone-slums.tsx  test-ground.json  test-ground.tsx  test-house.json  test-house.tsx  test-props.json  test-props.tsx  test-sidewalk.json  test-sidewalk.tsx  test-tower.json  test-tower.tsx  wall.json
assets/tilesets/ruled-tiles/tower/: rule1.tmx
assets/tilesets/sprite and tilesheets/: tumbalf_anim.aseprite
assets/tilesets/tiled/: ScumLevel.tmx  SlumLevel.tmx  test-sidewalk.tsx  tower.tsx
assets/tilesets/tumbalfs base/: base_props.json  base_props.tsx  base_special.tsx  tumbalf_base.json  tumbalf_base.tsx
assets/tilesets/tumbalfs-base/: base_props.tsx  base_special.json  tumbalf_base.tsx  tumbalfs-base.json  tumbalfs-base.tmx
assets/ui/: back_button_anim.json  power_button_anim.json  status-bars.json
cmake/: raylib.cmake
font_rasterizer/: Cargo.toml  LICENSE  README.md  shell.nix
font_rasterizer/src/: main.rs
levels/: 1-1_Entrance.tmx  1-2_Basar.tmx  1-3_Boss.tmx  1-3_Deserted.tmx  assemblia_level1.json  dev.json
levels/tiled-maps/: test-level.tmx  test-level2.tmx
lua/: entity.lua  enums.lua  event.lua  init.lua  math_utils.lua  table_utils.lua
lua/game/: battle.lua  game.lua  player.lua  tileset_ent.lua
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  crc64.c  crc64.h  limits.h  main.c  platform.c  platform.h  types.h  util.h
src/engine/input/: CMakeLists.txt  argparse.c  argparse.h  asset.c  asset.h  input.c  input.h  input_state.c  input_state.h  keys.h
src/engine/logic/: CMakeLists.txt  logic.c  logic.h
src/engine/render/: CMakeLists.txt  geyser.c  geyser.h  glyph.c  glyph.h  memory.c  memory.h  render.c  render.h  render_state.c  render_state.h  renderable.c  renderable.h  state.c  state.h  window.h
src/engine/render/shaders/: gen_baked_shaders.rb  shaders.h  text.frag  text.vert  unlit_generic.frag  unlit_generic.frag.spv  unlit_generic.vert  unlit_generic.vert.spv
src/engine/state/: CMakeLists.txt  state.c  state.h
src/engine/types/: matrix.c  matrix.h  numeric.h  quaternion.c  quaternion.h  vector.c  vector.h
src/game/: CMakeLists.txt  animation.cpp  animation.h  binds.h  entity.cpp  entity.h  game.cpp  game.h  interface.cpp  interface.h  level.cpp  level.h  text.h  vector.cpp  vector.h
src/game/controllers/: battle_controller.cpp  battle_controller.h  controller.h  dungeon_controller.cpp  dungeon_controller.h  menu_controller.cpp  menu_controller.h  overworld_controller.cpp  overworld_controller.h
src/game/entities/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  player.cpp  player.h
src/game/lua/: common.cpp  common.h  entity.cpp  entity.h  game.h  helpers.h  text.cpp  text.h
